--- a/style.css
+++ b/style.css
@@ -1,57 +1,52 @@
+.newsweek-logo {
+  width: 132px;
+  height: 20px;
+}
+header {
+  background-color: #f72210;
+  height: 50px;
+}
+.fa-user-alt,
+.fa-bars {
+  color: white;
+  cursor: pointer;
+}
+.subscribe {
+  border-radius: 30px;
+}
 
-.newsweek-logo {    width: 132px;
-    height: 20px;
-  }
-  header {
-    background-color: #F72210;
-    height: 50px;
-  }
-  .fa-user-alt,
-  .fa-bars {
-    color: white;
-  }
-  .subscribe {
-    border-radius: 30px;
-  }
+/* MAIN SHOWCASE SECTION */
+.img-fluid {
+  width: 100%;
+}
 
-  /* MAIN SHOWCASE SECTION */
-  .img-fluid {
-      width: 100%;
-  }
+.featured-stories-heading {
+  font-size: 22px;
+  color: #000000;
+}
 
-  .featured-stories-heading{
-      font-size: 22px;
-      color: #000000;
-  }
+.featured-stories-p {
+  font-size: 13px;
+  color: #333333;
+}
 
-  .featured-stories-p {
-    font-size: 13px;
-    color: #333333;
-  }
+.featured-stories-header {
+  font-size: 16px;
+  color: #03030366;
+}
 
-  .featured-stories-header {
-      font-size: 16px;
-      color: #03030366;
-  }
-  
-  .featured-stories-bg-img {
-      background-image: url(./images/anthony-fauci-deborah-birx-covid19-coronavirus-getty.jpg);
-      background-size: cover;
-      background-position: center center;
-      height: 390px;
-  }
+.featured-stories-bg-img {
+  background-image: url(./images/anthony-fauci-deborah-birx-covid19-coronavirus-getty.jpg);
+  background-size: cover;
+  background-position: center center;
+  height: 390px;
+}
 
-  .featured-div-content {
-      left: 0;
-      bottom: 0;
-  }
+.featured-div-content {
+  bottom: 0;
+  background-color: rgba(255, 255, 255, 0.9);
+  color: #f72210;
+}
 
-  
-  /* Tablet breakpoint 768px */
-  /* Desktop breakpoint 992px */
-  
-  
-  
-  
-  
-  
+/* Tablet breakpoint 768px */
+/* Desktop breakpoint 992px */
