--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body{
+body {
   background-color: #f4f5f7;
 }
 
@@ -50,6 +50,59 @@ header {
   bottom: 0;
   background-color: rgba(255, 255, 255, 0.9);
   color: #f72210;
+}
+
+/* THE DEBATE */
+
+.the-debate img {
+  width: 100px;
+}
+
+.vs-debate {
+  height: 50px;
+}
+
+.vs-sudo {
+  text-align: center;
+  left: 50%;
+  top: -20%;
+  background-color: #000;
+  color: #d6d6d6;
+}
+.vs-sudo-hr {
+  margin: 2px;
+}
+
+.the-debate-heading,
+.legalizing {
+  border-bottom: 3px solid grey;
+}
+
+/* OPNION */
+
+.opnion img {
+  width: 75px;
+}
+.opnion div {
+  border-bottom: 1px solid grey;
+}
+
+.opnion div div {
+  border-bottom: none;
+}
+
+/* More stories  */
+
+.more-stories img {
+  width: 95px;
+  height: 95px;
+}
+.more-stories div {
+  border-bottom: 1px solid grey;
+}
+
+.more-stories div div {
+  border-bottom: none;
 }
 
 /* Tablet breakpoint 768px */
