--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ header {
   font-size: 16px;
 }
 
-.more-stories > div h4 {
+.more-stories>div h4 {
   font-size: 17px;
 }
 
@@ -148,7 +148,7 @@ header {
   color: #333;
 }
 
-.more-stories > div p {
+.more-stories>div p {
   font-size: 13px;
 }
 
@@ -339,6 +339,57 @@ footer i {
     width: 30%;
   }
 
+  /* U.S */
+
+  .us-container-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1em;
+
+  }
+
+  .us-container h3 {
+    font-size: 22px;
+    color: #f72210;
+  }
+
+
+  .us-text {
+    font-size: 22px;
+    text-decoration: none;
+  }
+
+  .us-text:hover {
+    color: black;
+    font-size: 22px;
+    border-bottom: 1px solid #f72210;
+    text-decoration: none;
+
+  }
+
+  .us-small-text {
+    color: black;
+    text-decoration: none;
+    font-size: 17px;
+  }
+
+  .us-small-text:hover {
+    border-bottom: 1px solid #f72210;
+    text-decoration: none;
+    color: black;
+  }
+
+  .us-small-img-1 {
+    width: 95px;
+    height: 65px;
+  }
+
+  .us-small-img-2 {
+    width: 95px;
+    height: 95px;
+  }
+
+
   /* news letter */
 
   .news-letter img {
@@ -370,6 +421,10 @@ footer i {
   main {
     width: 1300px;
     margin: 0 auto;
+  }
+
+  body {
+    overflow-x: hidden;
   }
 
   /* nav */
@@ -424,6 +479,57 @@ footer i {
   .editors-pick-bg-img {
     height: 180px;
   }
+
+  /* U.S */
+
+  .us-container-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1em;
+
+  }
+
+  .us-container h3 {
+    font-size: 22px;
+    color: #f72210;
+  }
+
+
+  .us-text {
+    font-size: 22px;
+    text-decoration: none;
+  }
+
+  .us-text:hover {
+    color: black;
+    font-size: 22px;
+    border-bottom: 1px solid #f72210;
+    text-decoration: none;
+
+  }
+
+  .us-small-text {
+    color: black;
+    text-decoration: none;
+    font-size: 17px;
+  }
+
+  .us-small-text:hover {
+    border-bottom: 1px solid #f72210;
+    text-decoration: none;
+    color: black;
+  }
+
+  .us-small-img-1 {
+    width: 95px;
+    height: 65px;
+  }
+
+  .us-small-img-2 {
+    width: 95px;
+    height: 95px;
+  }
+
 
   /* Subscribe */
   .subscribe-newsletter-grid {
